yarn install and swapped out some files to begin the project from a blank start

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "redux-file"]
 	path = redux-file
 	url = https://github.com/codejoncode/ReduxSimpleStarter.git
+[submodule "redux"]
+	path = redux
+	url = https://github.com/StephenGrider/ReduxSimpleStarter.git
